Detail form displaying correctly now Improve contrast ratio for legends

--- a/projects/neoprogeny/src/app/hybrid/hybrid.scss
+++ b/projects/neoprogeny/src/app/hybrid/hybrid.scss
@@ -39,11 +39,11 @@
 }
 
 .seed-dull, .offspring-germinate {
-    color: yellow;
+    color: darkorange;
 }
 
 .seed, .offspring {
-  color: greenyellow;
+  color: forestgreen;
 }
 
 /* Text */
